# finalYearProject

./: BSE_Explicit.ipynb  BSE_Explicit_CN.ipynb  BSE_Implicit.ipynb  BrownianMotion.ipynb  FractionalBm.ipynb  Heston.ipynb  HestonParameterOpti.ipynb  ReadMe.md  SRegression.ipynb  SymbolicRegression.ipynb  analytical.ipynb  requirements.txt
.github/workflows/: unit-tests.yml
.ipynb_checkpoints/: FractionalBm-checkpoint.ipynb
Brownian_Motion/: Brownian_Motion.py  Geometric_BM.py
Bse_Explicit/: bse_analytical.py  bse_explicit_call_put.py  bse_explicit_call_put_numba.py  bse_explicit_cn.py  down_out.py  down_out_call_put.py  plots.ipynb  plots.py  runBenchmarks.ipynb  run_benchmarks.ipynb  spatialVsTime.tex
Cuda/: CMakeLists.txt  README.md  dev_array.cpp  dev_array.h  main.cu
Cuda/bse-explicit/: kernels.cu  kernels.cuh  main.cu
Cuda/classDef/: optionTypeBSE.cpp  optionTypeBSE.h  optionTypeMC.cpp  optionTypeMC.h
Cuda/monte-carlo/: monteCarlo.cu  monteCarlo.cuh
G_Brownian_Motion/: Brownian_Motion.py  Brownian_motion.ipynb  GBM.ipynb  Geometric_BM.py  Monte_Carlo.py  plots.ipynb  plots.py
Greeks/: greeksvisualisation.ipynb  main.py
plots_tex/: cpuVsGPUMCarlo1.tex
tests/: test_bse_explicit_cn.py  test_geometric_bm.py
tests/integration_tests/: test_bse_explicit.py  test_monte_carlo.py
writeup/: bibliography.bib  main.tex
writeup/tikz/: Delta.tex  GBM.tex  Gamma.tex  Theta.tex  spatialVsTime.tex
